[package]
name = "cdnko"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "3.3.3"
actix-multipart = "0.3.0"
tokio-stream = "0.1.8"
mime_guess = "2.0.3"
derive_more = "0.99.17"

[dependencies.tokio]
version = "1.15.0"
features = ["full"]

[dependencies.serde]
version = "1.0.136"
features = ["derive"]

[dependencies.uuid]
version = "0.8.2"
features = ["v4"]